# kernel4gameserver

./: .gitignore  CMakeLists.txt  README.md
API/: IKernel.h  IModule.h
Public/: CArgs.h  CData.h  CLockUnit.h  CThread.cpp  CThread.h  Linux.h  MultiSys.cpp  MultiSys.h  TBundler.h  TCallBack.h  TPool.h  TQueue.h  TStream.h  Tools.h  Winsys.h
Public/google/protobuf/: map_proto2_unittest.pb.cc  map_proto2_unittest.pb.h  map_unittest.pb.cc  unittest.pb.cc  unittest_custom_options.pb.cc  unittest_custom_options.pb.h  unittest_drop_unknown_fields.pb.cc  unittest_drop_unknown_fields.pb.h  unittest_embed_optimize_for.pb.cc  unittest_embed_optimize_for.pb.h  unittest_import.pb.cc  unittest_import_lite.pb.h  unittest_import_public_lite.pb.cc  unittest_lite.pb.cc  unittest_lite.pb.h  unittest_lite_imports_nonlite.pb.h  unittest_no_arena.pb.h  unittest_no_field_presence.pb.cc  unittest_optimize_for.pb.h  unittest_preserve_unknown_enum.pb.cc
Public/google/protobuf/compiler/cpp/: cpp_test_bad_identifiers.pb.h
Public/tinyxml/: Makefile  readme.txt  tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp
logic/src/: CMakeLists.txt
logic/src/Define/: ProtocolID.h  ProtocolID.pb.cc  SSProtocolID.h  demo.pb.cc  demo.pb.h  demo.proto  proto_build.bat
logic/src/Define/ProtoGen/: protobuf-net.xml
logic/src/Define/ProtoGen/Complile/: protobuf-net.xml
logic/src/Gate/: CMakeLists.txt  ClientConnectSick.cpp  ClientConnectSick.h  ClientConnectSink.h  Gate.cpp  Gate.h
logic/src/Interface/: IConnectionSink.h  IGate.h  IObject.h  IObjectMgr.h
logic/src/ObjectMgr/: Attrib.cpp  Attrib.h  AttributeMgr.cpp  AttributeMgr.h  CMakeLists.txt  Object.cpp  Object.h  ObjectMgr.cpp  ObjectMgr.h  main.cpp
logic/src/gate/: CMakeLists.txt  ClientConnectSick.cpp  ClientConnectSick.h  Gate.cpp  Gate.h  main.cpp
src/: Kernel.cpp  Kernel.h  main.cpp
src/.svn/: all-wcprops  entries
src/API/: IKernel.h  IModule.h
src/API/.svn/: all-wcprops  entries
src/Public/: CArgs.h  CData.h  CDumper.cpp  CDumper.h  CHashMap.h  CLock.h  CLockUnit.h  CRand.h  CThread.cpp  CThread.h  Linux.h  MultiSys.cpp  MultiSys.h  TBundler.h  TCallBack.h  TPool.h  TQueue.h  TStream.h  Tools.h  Winsys.h
src/Public/.svn/: all-wcprops  entries
src/Public/.svn/text-base/: CLockUnit.h.svn-base  CThread.h.svn-base  MultiSys.h.svn-base  TPool.h.svn-base  Tools.h.svn-base
src/Public/google/protobuf/: map_lite_unittest.pb.cc  map_lite_unittest.pb.h  map_proto2_unittest.pb.cc  map_proto2_unittest.pb.h  map_unittest.pb.cc  map_unittest.pb.h  unittest.pb.cc  unittest.pb.h  unittest_arena.pb.cc  unittest_arena.pb.h  unittest_custom_options.pb.cc  unittest_custom_options.pb.h  unittest_drop_unknown_fields.pb.cc  unittest_drop_unknown_fields.pb.h  unittest_embed_optimize_for.pb.cc  unittest_embed_optimize_for.pb.h  unittest_empty.pb.cc  unittest_empty.pb.h  unittest_import.pb.cc  unittest_import.pb.h  unittest_import_lite.pb.cc  unittest_import_lite.pb.h  unittest_import_public.pb.cc  unittest_import_public.pb.h  unittest_import_public_lite.pb.cc  unittest_import_public_lite.pb.h  unittest_lite.pb.cc  unittest_lite.pb.h  unittest_lite_imports_nonlite.pb.cc  unittest_lite_imports_nonlite.pb.h  unittest_mset.pb.cc  unittest_mset.pb.h  unittest_no_arena.pb.cc  unittest_no_arena.pb.h  unittest_no_arena_import.pb.cc  unittest_no_arena_import.pb.h  unittest_no_field_presence.pb.cc  unittest_no_field_presence.pb.h  unittest_no_generic_services.pb.cc  unittest_no_generic_services.pb.h  (+8 more)
src/Public/google/protobuf/compiler/cpp/: cpp_test_bad_identifiers.pb.cc  cpp_test_bad_identifiers.pb.h
src/Public/google/protobuf/stubs/: pbconfig.h
src/Public/tinyxml/: Makefile  tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp
src/configmgr/: Configmgr.cpp  Configmgr.h
src/epoller/: ITcpServer.cpp  epoll_waiter.cpp  epoll_waiter.h  epoll_worker.cpp  epoll_worker.h  epoller.cpp  epoller.h  epoller_header.h  epoller_worker.cpp  header.h
src/epoller/.svn/: all-wcprops  entries
src/epoller/.svn/text-base/: ITcpServer.cpp.svn-base  epoll_waiter.cpp.svn-base  epoll_worker.h.svn-base  epoller.cpp.svn-base  epoller.h.svn-base
src/interface/: IConfigmgr.h  INetengine.h
src/interface/.svn/: all-wcprops  entries
src/interface/.svn/text-base/: ICore.h.svn-base  INetengine.h.svn-base
src/iocper/: ITcpServer.cpp  iocper.cpp  iocper.h  iocphead.cpp  iocphead.h  iocpworker.cpp  iocpworker.h
src/kernel/: CMakeLists.txt  Kernel.cpp  Kernel.h  main.cpp
src/kernel/configmgr/: Configmgr.cpp  Configmgr.h
src/kernel/interface/: IConfigmgr.h  ICore.h  ILogger.h  ILogicmgr.h  INetengine.h  ITimermgr.h
src/kernel/log/: Logger.cpp  Logger.h
src/kernel/logger/: Logger.h
src/kernel/logicmgr/: Logicmgr.cpp  Logicmgr.h
src/kernel/net/: Header.h
src/kernel/net/epoll/: CPipe.cpp  CPipe.h  ITcpServer.cpp  Pipe.h  SPipe.cpp  SPipe.h  epollWorker.cpp  epollWorker.h  epoller.cpp  epoller.h  epoller_worker.h  epollheader.h
src/kernel/net/iocp/: CPipe.cpp  CPipe.h  Pipe.h  SPipe.cpp  SPipe.h  iocper.cpp  iocper.h  iocphead.cpp  iocphead.h  iocpworker.cpp  iocpworker.h
src/kernel/timermgr/: TimeNode.cpp  TimeNode.h  TimeSlot.cpp  TimeSlot.h  TimerHandler.h  Timermgr.cpp  Timermgr.h
src/logic/: CMakeLists.txt
src/logic/Clients/: Client.cpp  Client.h  ClientMgr.cpp  ClientMgr.h  main.cpp
src/logic/Define/: ProtocolID.pb.cc  ProtocolID.pb.h  ProtocolID.proto  ProtocolID.proto.cs  SSProtocolID.h  demo.pb.cc  demo.pb.h  demo.proto  demo.proto.cs
src/logic/Define/ProtoGen/: client_msg_compile.bat  protobuf-net.xml
src/logic/Define/ProtoGen/Complile/: protobuf-net.xml
src/logic/Gate/: CMakeLists.txt  ClientConnectSink.cpp  ClientConnectSink.h  Gate.cpp  Gate.h  main.cpp
src/logic/Interface/: IGate.h  PublicHeader.h
src/logicmgr/: Logicmgr.cpp  Logicmgr.h
src/logicmgr/.svn/: all-wcprops  entries
src/logicmgr/.svn/text-base/: Logicmgr.cpp.svn-base  Logicmgr.h.svn-base
src/timermgr/: TimerHandler.h  Timermgr.cpp  Timermgr.h
